# chatmeta

./: .gitignore  pyproject.toml
src/chatmeta/: __init__.py  core.py
